<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mobilerideshareapplicationmbs.Homepage">

    <VideoView
        android:id="@+id/homepage_bgVideo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/homepage_logo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/homepage_logo"
        app:layout_constraintBottom_toTopOf="@id/h_guideline2"
        app:layout_constraintLeft_toRightOf="@id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@id/v_guideline3"
        app:layout_constraintTop_toBottomOf="@id/h_guideline1"
        app:srcCompat="@drawable/mbs_logo_image" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.57" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03527337" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8271605" />

    <Button
        android:id="@+id/homepage_driver_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/homepage_driver_button"
        android:drawableLeft="@drawable/homepage_driver_image"
        android:drawableStart="@drawable/homepage_driver_image"
        android:text="@string/driver"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/homepage_rider_button"
        app:layout_constraintLeft_toRightOf="@id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@id/v_guideline3"
        app:layout_constraintTop_toBottomOf="@id/h_guideline3" />

    <Button
        android:id="@+id/homepage_rider_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/homepage_rider_button"
        android:drawableLeft="@drawable/homepage_rider_image"
        android:drawableStart="@drawable/homepage_rider_image"
        android:text="@string/rider"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/h_guideline4"
        app:layout_constraintLeft_toRightOf="@id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@id/v_guideline3"
        app:layout_constraintTop_toBottomOf="@id/homepage_driver_button" />

</android.support.constraint.ConstraintLayout>
